# slimax

./: CMakeLists.txt  README.md  SimpleNotificator.cpp  SimpleNotificator.h  main.cpp
console/: ConsoleNotificator.cpp  ConsoleNotificator.h  consolenotificator.cpp  consolenotificator.h
engine/: EngineUtils.cpp  EngineUtils.h  Notificator.h  SimulationBuilder.cpp  SimulationBuilder.h  SimulationRunner.cpp  SimulationRunner.h  ValidationException.cpp  ValidationException.h  engineutils.cpp  engineutils.h  notificator.h  simulationbuilder.cpp  simulationbuilder.h  simulationrunner.cpp  simulationrunner.h  validationexception.cpp  validationexception.h
gui/: editwindow.cpp  editwindow.h  editwindow.ui  guinotificator.cpp  guinotificator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  plantscombobox.cpp  plantscombobox.h  snailscombobox.cpp  snailscombobox.h  tablecombobox.cpp  tablecombobox.h  tablespinbox.cpp  tablespinbox.h  worker.cpp  worker.h
model/: Aquarium.cpp  Aquarium.h  Carrot.cpp  Carrot.h  GardenSnail.cpp  GardenSnail.h  Grass.cpp  Grass.h  Lettuce.cpp  Lettuce.h  Plant.cpp  Plant.h  RomanSnail.cpp  RomanSnail.h  Simulation.cpp  Simulation.h  Snail.cpp  Snail.h  SnailType1.cpp  SnailType1.h  TurkishSnail.cpp  TurkishSnail.h  carrot.cpp  carrot.h  gardensnail.cpp  gardensnail.h  grass.cpp  grass.h  lettuce.cpp  lettuce.h  plant.h  simulation.cpp  snail.h  turkishsnail.h
template/: RandomSet.h
